[gd_scene load_steps=5 format=3 uid="uid://biapefoqxu3rk"]

[ext_resource type="Theme" uid="uid://3c4wfofywo74" path="res://themes/main_theme.tres" id="1_24oht"]
[ext_resource type="Script" path="res://source/series_view.gd" id="2_o5p4a"]
[ext_resource type="Script" path="res://source/smooth_scroll_container.gd" id="3_po84i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i01uv"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SeriesView" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_24oht")
theme_override_constants/separation = 12
script = ExtResource("2_o5p4a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_i01uv")

[node name="SeriesImage" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
stretch_mode = 3

[node name="InfoContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Title"
autowrap_mode = 3

[node name="Year" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.462745, 0.462745, 1)
text = "Year"

[node name="Control" type="Control" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="Overview" type="RichTextLabel" parent="InfoContainer"]
layout_mode = 2
fit_content_height = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
vertical_scroll_mode = 3
script = ExtResource("3_po84i")
tween_duration = 0.12

[node name="SeasonContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="EpisodeContainer" type="VBoxContainer" parent="ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer2/EpisodeContainer"]
layout_mode = 2

[node name="SeasonName" type="Label" parent="ScrollContainer2/EpisodeContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
vertical_alignment = 1

[node name="Spacer" type="Control" parent="ScrollContainer2/EpisodeContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
